--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "app",
+  "name": "Portfolio of Rodrigo Sanchez Isunza",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gigs13.github.io/gigs13.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
