--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Portfolio of Rodrigo Sanchez Isunza",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gigs13.github.io/gigs13.github.io",
+  "homepage": "https://gigs13.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
