--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "create-react-app": "^1.2.1",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "react-helmet-async": "^2.0.5"
   }
 }
